shortend notebooks, compacted the repo

--- a/notebooks/02_eodag_des_post.ipynb
+++ b/notebooks/02_eodag_des_post.ipynb
@@ -8,23 +8,17 @@
    "source": [
     "#Imports\n",
     "import os\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.image as mpimg\n",
     "import xarray as xr\n",
     "import folium\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
     "import datetime as dt\n",
     "\n",
     "from eodag import EODataAccessGateway\n",
     "from eodag import setup_logging\n",
-    "from eodag.crunch import FilterProperty\n",
-    "\n",
     "\n",
     "from rasterio.crs import CRS\n",
-    "from rioxarray.merge import merge_arrays\n",
     "\n",
-    "from eotools.shortcut import prepare, configure, plot_quicklooks\n",
+    "import eotools.shortcut as eoshort\n",
     "\n",
     "# Setup Verbose Values:\n",
     "# 0: no logging and no progress bar\n",
@@ -61,8 +55,9 @@
    "source": [
     "# Get Credentials from .env file and make dirs from paths.yml\n",
     "# These functions are just shortcuts from a python script and just help to keep the notebooks short and simple\n",
-    "secrets, ws_paths = prepare(log=False)\n",
-    "dag = configure(secrets=secrets, paths=ws_paths)"
+    "secrets, workspace = eoshort.read_paths(path='paths.yml')\n",
+    "dag = EODataAccessGateway()\n",
+    "dag = eoshort.configure(dag=dag, secrets=secrets, paths=workspace)"
    ]
   },
   {
@@ -81,7 +76,7 @@
    "outputs": [],
    "source": [
     "# Deserialize the Search Results\n",
-    "output_file = os.path.join(ws_paths['serialize'], \"search_results.geojson\")\n",
+    "output_file = os.path.join(workspace['serialize'], \"search_results.geojson\")\n",
     "deserialized_search_results = dag.deserialize_and_register(output_file)\n",
     "\n",
     "print(f\"Got {len(deserialized_search_results)} deserialized products.\")"
@@ -94,7 +89,7 @@
    "outputs": [],
    "source": [
     "#Plot Quicklooks of Search Results\n",
-    "plot_quicklooks(deserialized_search_results)"
+    "eoshort.plot_quicklooks(deserialized_search_results)"
    ]
   },
   {
@@ -262,7 +257,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function for loading multiple datasets"
+    "# Function for loading multiple datasets\n",
+    "def load_multiple_timestamps(products, bands:list, params):\n",
+    "    # Empty List where datasets are stored\n",
+    "    single_ds = []\n",
+    "    for product in products:\n",
+    "        # Load each dataarray and add to single_ds List\n",
+    "        single_product = load_single_product(product=product, bands=bands, params=params)\n",
+    "        single_ds.append(single_product)\n",
+    "    # Merge datasets from List\n",
+    "    ds = xr.merge(single_ds)\n",
+    "    return ds"
    ]
   },
   {
@@ -270,7 +275,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Function for finding all assets of a product\n",
+    "def load_assets(root:str, res=60, only_spectral:bool=True, include_tci:bool=False):\n",
+    "    jp2_files = [file for dirs in os.walk(root, topdown=True)\n",
+    "                     for file in dirs[2] if file.endswith(f\"_{res}m.jp2\")]\n",
+    "    assets = [file.split('_')[2] for file in jp2_files if file.startswith('T')]\n",
+    "\n",
+    "    if only_spectral and include_tci==False:\n",
+    "        assets = [a for a in assets if a[0]=='B']\n",
+    "    elif only_spectral and include_tci:\n",
+    "        assets = [a for a in assets if a[0] == 'B' or a[0] == 'T']\n",
+    "    else:\n",
+    "        pass\n",
+    "    return assets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bands_2_load = load_assets(paths[0], res=10, only_spectral=True, include_tci=False)\n",
+    "\n",
+    "ds = load_multiple_timestamps(products=products, bands=bands_2_load)"
+   ]
   }
  ],
  "metadata": {
