--- a/notebooks/03_eodag_img_pro.ipynb
+++ b/notebooks/03_eodag_img_pro.ipynb
@@ -22,7 +22,9 @@
     "from rasterio.crs import CRS\n",
     "from rioxarray.merge import merge_arrays\n",
     "\n",
-    "from eotools.shortcut import prepare, configure, deserialize\n",
+    "import eotools.shortcut as eoshort\n",
+    "import eotools.loading as eoload\n",
+    "import eotools.contrast as eocontrast\n",
     "\n",
     "# Setup Verbose Values:\n",
     "# 0: no logging and no progress bar\n",
@@ -57,9 +59,10 @@
    "source": [
     "# Get Credentials from .env file and make dirs from paths.yml\n",
     "# These functions are just shortcuts from a python script and just help to keep the notebooks short and simple\n",
-    "secrets, ws_paths = prepare(log=False)\n",
-    "dag = configure(secrets=secrets, paths=ws_paths)\n",
-    "deserialized_search_results = deserialize(filepath=\"search_results.geojson\", ws_path=ws_paths, dag=dag, log=True)\n",
+    "secrets, workspace = eoshort.read_paths(path='paths.yml')\n",
+    "dag = EODataAccessGateway()\n",
+    "dag = eoshort.configure(dag=dag, secrets=secrets, paths=workspace)\n",
+    "deserialized_search_results = eoshort.deserialize(filepath=\"search_results.geojson\", workspace=workspace, dag=dag, log=True)\n",
     "\n",
     "# Download multiple Products\n",
     "products = deserialized_search_results\n",
@@ -106,15 +109,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get a list of all available Bands (assets)\n",
-    "def get_assets(root:str, res=60):\n",
-    "    jp2_files = [file for dirs in os.walk(root, topdown=True)\n",
-    "                     for file in dirs[2] if file.endswith(f\"_{res}m.jp2\")]\n",
-    "    assets = [file.split('_')[2] for file in jp2_files if file.startswith('T')]\n",
-    "    return assets\n",
-    "    \n",
-    "    \n",
-    "assets = get_assets(paths[0], res=10)\n",
+    "# Get all Bands from products\n",
+    "assets = eoload.load_assets(paths[0], res=10, only_spectral=True, include_tci=False)\n",
     "assets"
    ]
   },
@@ -124,52 +120,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Functions for loading data into datasets.\n",
-    "\n",
-    "def load_single_product(product, bands:list):\n",
-    "    loaded_data = {}\n",
-    "\n",
-    "    for band in bands:\n",
-    "        data = product.get_data(band=band, **common_params)\n",
-    "        data = data.squeeze()\n",
-    "\n",
-    "        time_str = product.properties['startTimeFromAscendingNode']\n",
-    "        date = dt.datetime.strptime(time_str,'%Y-%m-%dT%H:%M:%S.%f%z')\n",
-    "\n",
-    "        data = data.expand_dims(dim={'time':[date.date()]})\n",
-    "        data.name = band\n",
-    "        loaded_data[band] = data\n",
-    "    ds = xr.Dataset(loaded_data)\n",
-    "    return ds\n",
-    "\n",
-    "def load_multiple_timestamps(products, bands:list):\n",
-    "    single_ds = []\n",
-    "    for product in products:\n",
-    "        single_product = load_single_product(product=product, bands=bands)\n",
-    "        single_ds.append(single_product)\n",
-    "\n",
-    "    ds = xr.merge(single_ds)\n",
-    "    return ds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Get Products from same Tile\n",
-    "tile_33UWP = sorted([p for p in products if 'T33UWP' == p.properties['title'].split('_')[5]], key=lambda p: p.properties[\"title\"].split(\"_\")[2])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "tile_ds = sorted([p for p in products if 'T33UWP' == p.properties['title'].split('_')[5]], key=lambda p: p.properties[\"title\"].split(\"_\")[2])\n",
+    "\n",
     "# Loading multiple Bands into a dataset with multiple Timestamps\n",
-    "ds = load_multiple_timestamps(products=tile_33UWP, bands=['B04', 'B03', 'B02', 'B08', 'TCI'])\n",
+    "ds = eoload.load_multiple_timestamps(products=tile_ds, bands=assets)\n",
     "ds"
    ]
   },
@@ -243,7 +198,8 @@
     "fig, ax = plt.subplots(figsize=(8,8))\n",
     "ax.imshow(rgb_raw, aspect=2)\n",
     "ax.set_title(\"rgb raw\")\n",
-    "ax.set_axis_off()"
+    "ax.set_axis_off()\n",
+    "plt.show()"
    ]
   },
   {
@@ -266,36 +222,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function for plotting an Histogram\n",
-    "\n",
-    "def histogram(arr, nbins=300, alpha=0.5, figsize=(5,5), title='Histogram'):\n",
-    "    #Flatten\n",
-    "    flat_r = arr[:, :, 0].flatten()\n",
-    "    flat_g = arr[:, :, 1].flatten()\n",
-    "    flat_b = arr[:, :, 2].flatten()\n",
-    "\n",
-    "    # You can set the number of bins and alpha individually\n",
-    "    mbins = np.linspace(np.nanmin(arr), np.nanmax(arr), nbins)\n",
-    "\n",
-    "    # Plot \n",
-    "    fig, ax = plt.subplots(figsize=figsize)\n",
-    "    ax.hist(flat_r, color='red', bins=mbins, alpha=alpha)\n",
-    "    ax.hist(flat_g, color='green', bins=mbins,  alpha=alpha)\n",
-    "    ax.hist(flat_b, color='blue', bins=mbins,  alpha=alpha)\n",
-    "\n",
-    "    ax.set_title(title)\n",
-    "    ax.set_xlabel('I')\n",
-    "    ax.set_ylabel('n')\n",
-    "    plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "histogram(rgb_raw, nbins=6)"
+    "# Plotting an Histogram\n",
+    "eocontrast.histogram(rgb_raw, nbins=6)"
    ]
   },
   {
@@ -309,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To fix this problem we can increase the contrast of the image. To do this we implement the following functions, which will be needed for processing your image. For more details on how these functions work and why we need them to increase contrast and correctly encode the data, take a look at https://www.cg.tuwien.ac.at/courses/EinfVisComp/Skriptum/SS13/EVC-11%20Point%20Operations.pdf for a great overview. In your own Code it might be helpful, if you put those functions in a Python script and import the script into your code."
+    "To fix this problem we can increase the contrast of the image. To do this we implement the functions which are stored in `eotools.contrast`. For more details on how these functions work and why we need them to increase contrast and correctly encode the data, take a look at https://www.cg.tuwien.ac.at/courses/EinfVisComp/Skriptum/SS13/EVC-11%20Point%20Operations.pdf for a great overview. In your own Code it might be helpful, if you put those functions in a Python script and import the script into your code. First we can use the `auto_clip()` or `clip()` function to set values of intensity which are outside of a boundary to the boundary border: "
    ]
   },
   {
@@ -318,132 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def auto_clip(I, percentile=0.02, pooled=True):\n",
-    "    \"\"\" \n",
-    "    Calculates the quantiles of I using the percentile parameter and clips the values using the clip function defined below.\n",
-    "    \n",
-    "    Modifies I\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    I : np.array(rows, cols, bands)\n",
-    "        Image array.\n",
-    "    percentile : float, optional\n",
-    "        Percentile defining the clipping boundaries of I in terms of its distribution (defaults to 0.02). \n",
-    "    pooled: if True, computes the pooled percentile over all band\n",
-    "            (default, use this to keep the relative intensities of the bands for natural looking images)    \n",
-    "            if False, computes the percentiles for each band individually\n",
-    "            (use this - in conjunction with stretch - to bring the different bands into a comparable range, e.g. for false colour images)\n",
-    "        \n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    np.array : \n",
-    "        Auto-clipped image data.\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    if pooled:\n",
-    "        v_min = np.nanquantile(I, percentile)\n",
-    "        v_max = np.nanquantile(I, 1 - percentile)\n",
-    " \n",
-    "    else:\n",
-    "        tmp = I.reshape(-1, I.shape[-1]) #collapes image x,y 2d-array into a 1d-array\n",
-    "        v_min = np.nanquantile(tmp, percentile, axis=0)\n",
-    "        v_max = np.nanquantile(tmp, 1 - percentile, axis=0)\n",
-    "        \n",
-    "    return clip(I, v_min, v_max)        \n",
-    "\n",
-    "def clip(I, v_min, v_max):\n",
-    "    \"\"\" \n",
-    "    Performs clipping (dt. \"Histogrammbegrenzung\")\n",
-    "    Sets all values in I that are outside of [v_min, v_max] to the corresponding boundary.\n",
-    "\n",
-    "    \n",
-    "    Modifies I\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    I : np.array\n",
-    "        Image array.\n",
-    "    v_min : scalar or array\n",
-    "        Lower clipping boundary for each band\n",
-    "    v_max : scalar or array\n",
-    "        lower clipping boundary for each band\n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    np.array : \n",
-    "        Clipped image data.\n",
-    "        \n",
-    "    \"\"\"\n",
-    "        \n",
-    "    tmp = I.reshape(-1, I.shape[-1]) #collapes image x,y 2d-array into a 1d-array         \n",
-    "    if np.isscalar(v_min):\n",
-    "        tmp[tmp < v_min] = v_min\n",
-    "        tmp[tmp > v_max] = v_max\n",
-    "    else:\n",
-    "        idx = np.where(tmp < v_min)\n",
-    "        tmp[idx]=v_min[idx[1]]\n",
-    "        idx = np.where(tmp > v_max)\n",
-    "        tmp[idx]=v_max[idx[1]]        \n",
-    "    \n",
-    "    return I\n",
-    "            \n",
-    "def stretch(I, p_min, p_max, pooled=True):\n",
-    "    \"\"\"\n",
-    "    Performs histogram stretching or normalisation (dt. \"Spreizung\")\n",
-    "    Computes and applies an affine transformation of values in I to the range [p_min, p_max]. \n",
-    "    For floating point images to be displayed with pylab.imshow(), p_min=0, p_max=1\n",
-    "    should be chosen.\n",
-    "    \n",
-    "    Modifies I\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    I : np.array\n",
-    "        Image array.\n",
-    "    p_min : number\n",
-    "        Lower boundary of the output range.\n",
-    "    p_max : number\n",
-    "        Upper  boundary of the output range.\n",
-    "    pooled: if True, the transformation is computed for and applied to all bands simultaneously  \n",
-    "            if False, -\"- to the individual bands separately\n",
-    "    Returns\n",
-    "    -------\n",
-    "    np.array : \n",
-    "        Normalised image data within the range [p_min, p_max].\n",
-    "    \n",
-    "    \"\"\"\n",
-    "\n",
-    "    tmp = I.reshape(-1, I.shape[-1]) #collapes image x,y 2d-array into a 1d-array   \n",
-    "\n",
-    "    if pooled:    \n",
-    "        q_min = np.nanmin(I)\n",
-    "        q_max = np.nanmax(I)\n",
-    "\n",
-    "    else:\n",
-    "             \n",
-    "        q_min = np.nanmin(tmp, axis = 0)\n",
-    "        q_max = np.nanmax(tmp, axis = 0)        \n",
-    "\n",
-    "    tmp[:] =  (p_max - p_min) * (tmp - q_min) / (q_max - q_min) + p_min\n",
-    "    return I"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First we can use the `auto_clip()` or `clip()` function to set values of intensity which are outside of a boundary to the boundary border: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rgb_clipped = auto_clip(rgb_raw.copy(), percentile=0.05, pooled = True)"
+    "rgb_clipped = eocontrast.auto_clip(rgb_raw.copy(), percentile=0.05, pooled = True)"
    ]
   },
   {
@@ -459,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "histogram(rgb_clipped, nbins=6)"
+    "eocontrast.histogram(rgb_clipped, nbins=6)"
    ]
   },
   {
@@ -477,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rgb_clipped_stretched = stretch(rgb_clipped.copy(), 0, 1, pooled = True)"
+    "rgb_clipped_stretched = eocontrast.stretch(rgb_clipped.copy(), 0, 1, pooled = True)"
    ]
   },
   {
@@ -486,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "histogram(rgb_clipped_stretched, nbins=6)"
+    "eocontrast.histogram(rgb_clipped_stretched, nbins=6)"
    ]
   },
   {
@@ -498,7 +301,8 @@
     "fig, ax = plt.subplots()\n",
     "ax.imshow(rgb_clipped_stretched)\n",
     "ax.set_title(\"rgb clipped stretched\")\n",
-    "ax.set_axis_off()"
+    "ax.set_axis_off()\n",
+    "plt.show()"
    ]
   },
   {
@@ -518,7 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rgb_clipped_stretched_log = stretch(auto_clip(np.log(rgb_raw.copy()), percentile=0.05),0,1)"
+    "rgb_clipped_stretched_log = eocontrast.stretch(eocontrast.auto_clip(np.log(rgb_raw.copy()), percentile=0.05),0,1)"
    ]
   },
   {
@@ -568,7 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "histogram(fc_img)"
+    "eocontrast.histogram(fc_img)"
    ]
   },
   {
@@ -584,9 +388,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fc_img_clipped_stretched_false = stretch(auto_clip(np.log(fc_img.copy()), pooled = False), 0, 1, pooled = False)\n",
+    "fc_img_clipped_stretched_false = eocontrast.stretch(eocontrast.auto_clip(np.log(fc_img.copy()), pooled = False), 0, 1, pooled = False)\n",
     "\n",
-    "fc_img_clipped_stretched_true = stretch(auto_clip(np.log(fc_img.copy()), percentile=0.005, pooled = True), 0, 1, pooled = True)"
+    "fc_img_clipped_stretched_true = eocontrast.stretch(eocontrast.auto_clip(np.log(fc_img.copy()), percentile=0.005, pooled = True), 0, 1, pooled = True)"
    ]
   },
   {
@@ -595,8 +399,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "histogram(fc_img_clipped_stretched_false)\n",
-    "histogram(fc_img_clipped_stretched_true)"
+    "eocontrast.histogram(fc_img_clipped_stretched_false)\n",
+    "eocontrast.histogram(fc_img_clipped_stretched_true)"
    ]
   },
   {
@@ -633,12 +437,13 @@
     "b04 = cloudfree_img['B04'].values\n",
     "\n",
     "cloudfree_img_raw = np.stack([b04, b03, b02], axis=2)\n",
-    "cloudfree_img = stretch(auto_clip(np.log(cloudfree_img_raw)),0,1)\n",
+    "cloudfree_img = eocontrast.stretch(eocontrast.auto_clip(np.log(cloudfree_img_raw)),0,1)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(8,8))\n",
     "ax.imshow(cloudfree_img)\n",
     "ax.set_title(\"Cloudfree image\")\n",
-    "ax.set_axis_off()"
+    "ax.set_axis_off()\n",
+    "plt.show()"
    ]
   }
  ],
