--- a/notebooks/04_eodag_search_post.ipynb
+++ b/notebooks/04_eodag_search_post.ipynb
@@ -24,7 +24,8 @@
     "from rasterio.crs import CRS\n",
     "from rioxarray.merge import merge_arrays\n",
     "\n",
-    "from eotools.shortcut import prepare, configure, deserialize, plot_quicklooks\n",
+    "import eotools.shortcut as eoshort\n",
+    "import eotools.loading as eoload\n",
     "\n",
     "# Setup Verbose Values:\n",
     "# 0: no logging and no progress bar\n",
@@ -63,8 +64,9 @@
    "source": [
     "# Get Credentials from .env file and make dirs from paths.yml\n",
     "# These functions are just shortcuts from a python script and just help to keep the notebooks short and simple\n",
-    "secrets, ws_paths = prepare(log=False)\n",
-    "dag = configure(secrets=secrets, paths=ws_paths)"
+    "secrets, workspace = eoshort.read_paths(path='paths.yml')\n",
+    "dag = EODataAccessGateway()\n",
+    "dag = eoshort.configure(dag=dag, secrets=secrets, paths=workspace)"
    ]
   },
   {
@@ -126,7 +128,7 @@
    "outputs": [],
    "source": [
     "#Plot Quicklooks of Search Results\n",
-    "plot_quicklooks(search_results)"
+    "eoshort.plot_quicklooks(search_results)"
    ]
   },
   {
