--- a/notebooks/01_eodag_search.ipynb
+++ b/notebooks/01_eodag_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,7 @@
     "\n",
     "import yaml\n",
     "from dotenv import dotenv_values\n",
+    "from pathlib import Path\n",
     "\n",
     "# Setup Verbose Values:\n",
     "# 0: no logging and no progress bar\n",
@@ -51,22 +52,23 @@
     "# These functions will be shortend with some python script  in the other notebooks to ensure shorter more readable notebooks.\n",
     "\n",
     "# Get Paths from yaml file \n",
-    "with open(\"paths.yml\", \"r\") as f:\n",
-    "    paths = yaml.safe_load(f)\n",
+    "source_path = Path('paths.yml').resolve()\n",
+    "with open(source_path, \"r\") as f:\n",
+    "    workspace = yaml.safe_load(f)\n",
     "\n",
     "# Get Secrets from .env File (defined in paths.yml)\n",
-    "secrets = dotenv_values(paths['credentials'])\n",
+    "secrets = dotenv_values(workspace['credentials'])\n",
     "\n",
     "# Create Directories for future data storage\n",
-    "directories = [paths['download'], paths['serialize'], paths['post'], paths['shapefiles']]\n",
+    "directories = [workspace['download'], workspace['serialize'], workspace['post'], workspace['shapefiles']]\n",
+    "\n",
     "for d in directories:\n",
-    "    if not os.path.isdir(d):\n",
-    "        abspath = os.path.abspath(d)\n",
-    "        os.mkdir(abspath)\n",
-    "        print(f'Made Dir: {abspath}')\n",
+    "    dir_path = Path(d).resolve()\n",
+    "    if not dir_path.is_dir():\n",
+    "        dir_path.mkdir(parents=True, exist_ok=True)\n",
+    "        print(f'Made Directory: {dir_path}')\n",
     "    else:\n",
-    "        abspath = os.path.abspath(d)\n",
-    "        print(f'Dir exists: {abspath}')"
+    "        print(f'Directory exists: {dir_path}')"
    ]
   },
   {
@@ -92,7 +94,7 @@
     "dag.update_providers_config(f\"\"\"\n",
     "    cop_dataspace:\n",
     "        download:\n",
-    "            outputs_prefix: {os.path.abspath(ws_paths['download'])}\n",
+    "            outputs_prefix: {os.path.abspath(workspace['download'])}\n",
     "        auth:\n",
     "            credentials:\n",
     "                username: {secrets['USER_KEY']}\n",
@@ -256,11 +258,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sorting the search results for reproducibility (sorted by tile(5) and date (2))\n",
-    "products = SearchResult(sorted([p for p in online_products], key=lambda p: p.properties[\"title\"].split(\"_\")[5] + p.properties[\"title\"].split(\"_\")[2]))\n",
-    "\n",
     "# Filter by Processing Pipeline\n",
-    "products = SearchResult([p for p in products if p.properties['id'].split('_')[3] == 'N0300'])\n",
+    "products = SearchResult([p for p in online_products if p.properties['id'].split('_')[3] == 'N0300'])\n",
     "\n",
     "# Filter by Tile\n",
     "products = SearchResult([p for p in products if p.properties['id'].split('_')[5] == 'T33UXP'])\n",
@@ -285,7 +284,7 @@
     "# 4. Serialize (Save the filtered products as a GeoJSON File \n",
     "#               to save the state of a search and restore it later)\n",
     "\n",
-    "output_file = os.path.join(paths['serialize'], \"search_results.geojson\")\n",
+    "output_file = os.path.join(workspace['serialize'], \"search_results.geojson\")\n",
     "\n",
     "dag.serialize(\n",
     "    online_products,\n",
