--- a/notebooks/05_eodag_merging.ipynb
+++ b/notebooks/05_eodag_merging.ipynb
@@ -22,7 +22,9 @@
     "from rasterio.crs import CRS\n",
     "from rioxarray.merge import merge_arrays\n",
     "\n",
-    "from eotools.shortcut import prepare, configure, deserialize\n",
+    "import eotools.shortcut as eoshort\n",
+    "import eotools.loading as eoload\n",
+    "\n",
     "\n",
     "# Setup Verbose Values:\n",
     "# 0: no logging and no progress bar\n",
@@ -60,9 +62,10 @@
    "source": [
     "# Get Credentials from .env file and make dirs from paths.yml\n",
     "# These functions are just shortcuts from a python script and just help to keep the notebooks short and simple\n",
-    "secrets, ws_paths = prepare(log=False)\n",
-    "dag = configure(secrets=secrets, paths=ws_paths)\n",
-    "deserialized_search_results = deserialize(filepath=\"search_results.geojson\", ws_path=ws_paths, dag=dag, log=True)\n",
+    "secrets, workspace = eoshort.read_paths(path='paths.yml')\n",
+    "dag = EODataAccessGateway()\n",
+    "dag = eoshort.configure(dag=dag, secrets=secrets, paths=workspace)\n",
+    "deserialized_search_results = eoshort.deserialize(filepath=\"search_results.geojson\", workspace=workspace, dag=dag, log=True)\n",
     "\n",
     "# Download multiple Products\n",
     "products = deserialized_search_results\n",
@@ -122,14 +125,7 @@
    "outputs": [],
    "source": [
     "# Get a list of all available Bands (assets)\n",
-    "def get_assets(root:str, res=60):\n",
-    "    jp2_files = [file for dirs in os.walk(root, topdown=True)\n",
-    "                     for file in dirs[2] if file.endswith(f\"_{res}m.jp2\")]\n",
-    "    assets = [file.split('_')[2] for file in jp2_files if file.startswith('T')]\n",
-    "    return assets\n",
-    "    \n",
-    "\n",
-    "bands_to_load = get_assets(paths[0], res=10)[1:-1]\n",
+    "bands_to_load = eoload.load_assets(paths[0], res=10)[1:-1]\n",
     "print(bands_to_load)\n"
    ]
   },
@@ -139,32 +135,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Functions for loading data into datasets.\n",
+    "# Loading multiple Bands into a dataset with multiple Timestamps of single Tile\n",
     "\n",
-    "def load_single_product(product, bands:list):\n",
-    "    loaded_data = {}\n",
+    "tile_1 = sorted([p for p in products if 'T33UWP' == p.properties['title'].split('_')[5]], key=lambda p: p.properties[\"title\"].split(\"_\")[2])\n",
     "\n",
-    "    for band in bands:\n",
-    "        data = product.get_data(band=band, **common_params)\n",
-    "        data = data.squeeze()\n",
-    "\n",
-    "        time_str = product.properties['startTimeFromAscendingNode']\n",
-    "        date = dt.datetime.strptime(time_str,'%Y-%m-%dT%H:%M:%S.%f%z')\n",
-    "\n",
-    "        data = data.expand_dims(dim={'time':[date.date()]})\n",
-    "        data.name = band\n",
-    "        loaded_data[band] = data\n",
-    "    ds = xr.Dataset(loaded_data)\n",
-    "    return ds\n",
-    "\n",
-    "def load_multiple_timestamps(products, bands:list):\n",
-    "    single_ds = []\n",
-    "    for product in products:\n",
-    "        single_product = load_single_product(product=product, bands=bands)\n",
-    "        single_ds.append(single_product)\n",
-    "\n",
-    "    ds = xr.merge(single_ds)\n",
-    "    return ds"
+    "ds_t1 = eoload.load_multiple_timestamps(products=tile_1, bands=bands_to_load)\n",
+    "print(f'This dataset from Tile T33UWP has {len(ds_t1.time)} timestamps.')"
    ]
   },
   {
@@ -175,24 +151,10 @@
    "source": [
     "# Loading multiple Bands into a dataset with multiple Timestamps of single Tile\n",
     "\n",
-    "tile_33UWP = sorted([p for p in products if 'T33UWP' == p.properties['title'].split('_')[5]], key=lambda p: p.properties[\"title\"].split(\"_\")[2])\n",
+    "tile_2 = sorted([p for p in products if 'T33UXP' == p.properties['title'].split('_')[5]], key=lambda p: p.properties[\"title\"].split(\"_\")[2])\n",
     "\n",
-    "ds_33UWP = load_multiple_timestamps(products=tile_33UWP, bands=bands_to_load)\n",
-    "print(f'This dataset from Tile T33UWP has {len(ds_33UWP.time)} timestamps.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Loading multiple Bands into a dataset with multiple Timestamps of single Tile\n",
-    "\n",
-    "tile_33UXP = sorted([p for p in products if 'T33UXP' == p.properties['title'].split('_')[5]], key=lambda p: p.properties[\"title\"].split(\"_\")[2])\n",
-    "\n",
-    "ds_33UXP = load_multiple_timestamps(products=tile_33UXP, bands=bands_to_load)\n",
-    "print(f'This dataset from Tile T33UXP has {len(ds_33UXP.time)} timestamps.')"
+    "ds_t2 = eoload.load_multiple_timestamps(products=tile_2, bands=bands_to_load)\n",
+    "print(f'This dataset from Tile T33UXP has {len(ds_t2.time)} timestamps.')"
    ]
   },
   {
@@ -264,13 +226,6 @@
    "source": [
     "merged_ndvi.plot(cmap='RdYlGn', center=False, size=6, aspect='auto')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
