--- a/notebooks/06_eodag_classify.ipynb
+++ b/notebooks/06_eodag_classify.ipynb
@@ -22,7 +22,9 @@
     "from rasterio.crs import CRS\n",
     "from rioxarray.merge import merge_arrays\n",
     "\n",
-    "from eotools.shortcut import prepare, configure, deserialize, plot_quicklooks\n",
+    "import eotools.shortcut as eoshort\n",
+    "import eotools.loading as eoload\n",
+    "import eotools.geometry as eogeom\n",
     "\n",
     "import geopandas as gpd\n",
     "from sklearn import svm, tree\n",
@@ -71,9 +73,10 @@
    "source": [
     "# Get Credentials from .env file and make dirs from paths.yml\n",
     "# These functions are just shortcuts from a python script and just help to keep the notebooks short and simple\n",
-    "secrets, ws_paths = prepare(log=False)\n",
-    "dag = configure(secrets=secrets, ws_paths=ws_paths)\n",
-    "deserialized_search_results = deserialize(filepath=\"search_results.geojson\", ws_path=ws_paths, dag=dag, log=True)"
+    "secrets, workspace = eoshort.read_paths(path='paths.yml')\n",
+    "dag = EODataAccessGateway()\n",
+    "dag = eoshort.configure(dag=dag, secrets=secrets, paths=workspace)\n",
+    "deserialized_search_results = eoshort.deserialize(filepath=\"search_results.geojson\", workspace=workspace, dag=dag, log=True)"
    ]
   },
   {
@@ -83,7 +86,7 @@
    "outputs": [],
    "source": [
     "#Plot Quicklooks of Search Results\n",
-    "plot_quicklooks(deserialized_search_results)"
+    "eoshort.plot_quicklooks(deserialized_search_results)"
    ]
   },
   {
@@ -181,62 +184,7 @@
    "outputs": [],
    "source": [
     "# Get a list of all available Bands (assets)\n",
-    "def get_assets(root:str, res=60, only_spectral:bool=True, include_tci:bool=False):\n",
-    "    jp2_files = [file for dirs in os.walk(root, topdown=True)\n",
-    "                     for file in dirs[2] if file.endswith(f\"_{res}m.jp2\")]\n",
-    "    assets = [file.split('_')[2] for file in jp2_files if file.startswith('T')]\n",
-    "\n",
-    "    if only_spectral and include_tci==False:\n",
-    "        assets = [a for a in assets if a[0]=='B']\n",
-    "    elif only_spectral and include_tci:\n",
-    "        assets = [a for a in assets if a[0] == 'B' or a[0] == 'T']\n",
-    "    else:\n",
-    "        pass\n",
-    "    \n",
-    "    return assets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Functions for loading data into datasets.\n",
-    "\n",
-    "def load_single_product(product, bands:list):\n",
-    "    loaded_data = {}\n",
-    "\n",
-    "    for band in bands:\n",
-    "        data = product.get_data(band=band, **common_params)\n",
-    "        data = data.squeeze()\n",
-    "\n",
-    "        time_str = product.properties['startTimeFromAscendingNode']\n",
-    "        date = dt.datetime.strptime(time_str,'%Y-%m-%dT%H:%M:%S.%f%z')\n",
-    "\n",
-    "        data = data.expand_dims(dim={'time':[date.date()]})\n",
-    "        data.name = band\n",
-    "        loaded_data[band] = data\n",
-    "    ds = xr.Dataset(loaded_data)\n",
-    "    return ds\n",
-    "\n",
-    "def load_multiple_timestamps(products, bands:list):\n",
-    "    single_ds = []\n",
-    "    for product in products:\n",
-    "        single_product = load_single_product(product=product, bands=bands)\n",
-    "        single_ds.append(single_product)\n",
-    "\n",
-    "    ds = xr.merge(single_ds)\n",
-    "    return ds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assets = get_assets(path, res=10, only_spectral=True, include_tci=False)\n",
+    "assets = eoload.load_assets(path, res=10, only_spectral=True, include_tci=False)\n",
     "assets"
    ]
   },
@@ -247,7 +195,7 @@
    "outputs": [],
    "source": [
     "# Loading multiple Bands into a dataset\n",
-    "ds = load_single_product(product=product, bands=assets)\n",
+    "ds = eoload.load_single_product(product=product, bands=assets)\n",
     "ds"
    ]
   },
@@ -258,125 +206,6 @@
    "outputs": [],
    "source": [
     "single_img = ds.sel(time=dt.datetime(2023, 4, 22), method='nearest')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define Functions to prepare the dataset for classification\n",
-    "\n",
-    "def geojson_to_polygon(path:str) -> list:\n",
-    "    '''\n",
-    "    Reads a geojson File and returns a List of Polygons \n",
-    "\n",
-    "    Params:\n",
-    "        - ``path``: Filepath to Geojson\n",
-    "\n",
-    "    Returns: \n",
-    "        - ``polygons``: List of Polygons\n",
-    "    '''\n",
-    "    gdf = gpd.read_file(path)\n",
-    "    polygons = [feature for feature in gdf.geometry]\n",
-    "    return polygons\n",
-    "\n",
-    "def geojson_to_polygon_dict(path:str) -> dict:\n",
-    "    '''\n",
-    "    Uses the Path of a Geojson File to extract the polygons and puts them into a Dictionary.\n",
-    "\n",
-    "    Params: \n",
-    "        - ``path``: Filepath to Geojson\n",
-    "\n",
-    "    Returns: \n",
-    "        - ``polygons_dict``\n",
-    "    '''\n",
-    "    polygons = geojson_to_polygon(path)\n",
-    "    polygons_dict = {idx: [polygon] for idx, polygon in enumerate(polygons)}\n",
-    "    return polygons_dict\n",
-    "\n",
-    "def clip_array(ds:xr.Dataset, polygons):\n",
-    "    '''\n",
-    "    Takes an xarray.Dataset and a geometry and returns the xarray.Dataset, which has been spatialy clipped\n",
-    "    to the geometry.\n",
-    "\n",
-    "    Params:\n",
-    "        - ``ds``: xarray.Dataset\n",
-    "        - ``polygons``: shapely.geometry\n",
-    "    \n",
-    "    Returns:\n",
-    "        - ``clipped_nan``: clipped dataset where values outside of polygons have Nan type\n",
-    "    '''\n",
-    "    clipped = ds.rio.clip(polygons, invert=False, all_touched=False, drop=True)\n",
-    "    clipped_nan = clipped.where(clipped == ds)\n",
-    "    return clipped_nan\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define Functions to prepare the dataset for classification\n",
-    "\n",
-    "def preprocess_data_to_classify(ds:xr.Dataset, feature_path:str, nonfeature_path:str, bands:list=None) -> list:\n",
-    "    '''\n",
-    "    Takes an xarray Dataset, two geojson files (one of areas with the desired feature, the other not with the feature)\n",
-    "    and a list of strings of the desired Bandnames in the Dataset and returns The Training and Test data for some Classifikators.\n",
-    "\n",
-    "    Params:\n",
-    "        - ``ds``: xarray.Dataset\n",
-    "        - ``feature_path``: Filepath to Geojson with Polygons, which represent the Feature (e.g.: forested Areas)\n",
-    "        - ``nonfeature_path``: Filepath to Geojson, which does not have the feature (e.g.: not forested Areas)\n",
-    "        - ``bands`` (optional): List of Strings of desired Spectral Bands (e.g.: bands=['B02', 'B03', 'B04', 'B08'])\n",
-    "                                If None, then takes all in the Dataset.\n",
-    "\n",
-    "    Returns:\n",
-    "        -  ``X_train, X_test, y_train, y_test``; Training and Test Split for scikit.learn Classificators\n",
-    "    '''\n",
-    "    # List all Bands which are loaded as Variables into the Dataset\n",
-    "    if bands == None:\n",
-    "        bands = list(ds.data_vars)\n",
-    "\n",
-    "    # Geojsons from Features to Polygons\n",
-    "    polygons_feat = geojson_to_polygon_dict(feature_path)\n",
-    "    polygons_nonfeat = geojson_to_polygon_dict(nonfeature_path)\n",
-    "\n",
-    "    # Dictionaries with Dataarrays, each clipped by a Polygon\n",
-    "    data_dict_feat = {idx: clip_array(ds, polygon) for idx, polygon in polygons_feat.items()}\n",
-    "    data_dict_nonfeat = {idx: clip_array(ds, polygon)  for idx, polygon in polygons_nonfeat.items()}\n",
-    "\n",
-    "    # Median over time to get rid of outliers\n",
-    "    median_data_dict_feat = {idx: xarray.median(dim='time', skipna=True) for idx, xarray in data_dict_feat.items()}\n",
-    "    median_data_dict_nonfeat = {idx: xarray.median(dim='time', skipna=True) for idx, xarray in data_dict_nonfeat.items()}\n",
-    "\n",
-    "    # Reshape the polygon dataarrays to get a tuple (one value per band) of pixel values\n",
-    "    feat_data = [xarray.to_array().values.reshape(len(bands),-1).T for xarray in median_data_dict_feat.values()]\n",
-    "    nonfeat_data = [xarray.to_array().values.reshape(len(bands),-1).T for xarray in median_data_dict_nonfeat.values()]\n",
-    "\n",
-    "    # The rows of the different polygons are concatenated to a single array for further processing\n",
-    "    feat_values = np.concatenate(feat_data)\n",
-    "    nonfeat_values = np.concatenate(nonfeat_data)\n",
-    "\n",
-    "    # Drop Nan Values\n",
-    "    X_feat_data = feat_values[~np.isnan(feat_values).any(axis=1)]\n",
-    "    X_nonfeat_data = nonfeat_values[~np.isnan(nonfeat_values).any(axis=1)]\n",
-    "\n",
-    "    # Creating Output Vector (1 for pixel is features; 0 for pixel is not feature)\n",
-    "    y_feat_data = np.ones(X_feat_data.shape[0])\n",
-    "    y_nonfeat_data = np.zeros(X_nonfeat_data.shape[0])\n",
-    "    \n",
-    "    # Concatnate all Classes for training \n",
-    "    X = np.concatenate([X_feat_data, X_nonfeat_data])\n",
-    "    y = np.concatenate([y_feat_data, y_nonfeat_data])\n",
-    "\n",
-    "    # Split into Training and Testing Data.\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.5, random_state=42)\n",
-    "\n",
-    "    return X_train, X_test, y_train, y_test"
    ]
   },
   {
@@ -409,7 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = preprocess_data_to_classify(ds=ds, feature_path=path_forest, nonfeature_path=path_nonforest)"
+    "X_train, X_test, y_train, y_test = eogeom.preprocess_data_to_classify(ds=ds, feature_path=path_forest, nonfeature_path=path_nonforest)"
    ]
   },
   {
@@ -520,7 +349,7 @@
    "outputs": [],
    "source": [
     "# Loading the True Color Image\n",
-    "tci = load_single_product(product=product, bands=['TCI'])\n",
+    "tci = eoload.load_single_product(product=product, bands=['TCI'])\n",
     "tci = tci.sel(time=dt.datetime(2023, 4, 22), method='nearest')"
    ]
   },
@@ -602,56 +431,6 @@
    "metadata": {},
    "source": [
     "NDVI does a good job seperating vegetation from non-vegetation but it can't seperate forest from vegetated cropland, or grassland."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Defining a function which adds any Index to the dataset might helps keeping your code clean.\n",
-    "def add_index_to_dataset(data:xr.Dataset, index:str) -> xr.Dataset:\n",
-    "    '''\n",
-    "    Takes an xarray Dataset and calculates and adds one of the indices:\n",
-    "    \n",
-    "    Params:\n",
-    "        - ``data``: xarray.Dataset\n",
-    "        - ``index``: string (one of [``NDVI``, ``NDMI``, ``MSI``, ``NDWI``])\n",
-    "\n",
-    "    Returns:\n",
-    "        - ``data`` with Index as new Variable\n",
-    "    '''\n",
-    "    indices = {'NDVI':{'name':'Normalized Diffference Vegetation Index',\n",
-    "                       'function':normalized_difference(data['B08'], data['B04'])},\n",
-    "            #    'NDMI': {'name':'Normalized Diffference Moisture Index',\n",
-    "            #            'function':normalized_difference(data['B08'], data['B11'])},\n",
-    "            #    'MSI': {'name':'Moisture Stress Index',\n",
-    "            #            'function':data['B11'] / data['B08']},\n",
-    "               'NDWI': {'name':'Normalized Diffference Water Index',\n",
-    "                       'function':normalized_difference(data['B03'], data['B08'])},}\n",
-    "    data[index] = indices[index]['function']\n",
-    "    print(f'{indices[index]['name']} ({index}) has been calculated.')\n",
-    "    return data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds = add_index_to_dataset(ds, index='NDVI')\n",
-    "ds = add_index_to_dataset(ds, index='NDWI')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds['NDWI'].sel(time=dt.datetime(2021, 4, 12), method='nearest').plot.imshow()"
    ]
   }
  ],
