--- a/notebooks/01_eodag_search.ipynb
+++ b/notebooks/01_eodag_search.ipynb
@@ -60,7 +60,7 @@
     "secrets = dotenv_values(workspace['credentials'])\n",
     "\n",
     "# Create Directories for future data storage\n",
-    "directories = [workspace['download'], workspace['serialize'], workspace['post'], workspace['shapefiles']]\n",
+    "directories = [workspace['serialize'], workspace['post'], workspace['shapefiles']]\n",
     "\n",
     "for d in directories:\n",
     "    dir_path = Path(d).resolve()\n",
