--- a/notebooks/01_eodag_search.ipynb
+++ b/notebooks/01_eodag_search.ipynb
@@ -57,18 +57,7 @@
     "    workspace = yaml.safe_load(f)\n",
     "\n",
     "# Get Secrets from .env File (defined in paths.yml)\n",
-    "secrets = dotenv_values(workspace['credentials'])\n",
-    "\n",
-    "# Create Directories for future data storage\n",
-    "directories = [workspace['serialize'], workspace['post'], workspace['shapefiles']]\n",
-    "\n",
-    "for d in directories:\n",
-    "    dir_path = Path(d).resolve()\n",
-    "    if not dir_path.is_dir():\n",
-    "        dir_path.mkdir(parents=True, exist_ok=True)\n",
-    "        print(f'Made Directory: {dir_path}')\n",
-    "    else:\n",
-    "        print(f'Directory exists: {dir_path}')"
+    "secrets = dotenv_values(workspace['credentials'])"
    ]
   },
   {
