--- a/notebooks/01_eodag_search.ipynb
+++ b/notebooks/01_eodag_search.ipynb
@@ -19,7 +19,6 @@
     "from eodag import SearchResult\n",
     "\n",
     "import yaml\n",
-    "from dotenv import dotenv_values\n",
     "from pathlib import Path\n",
     "\n",
     "# Setup Verbose Values:\n",
@@ -28,7 +27,7 @@
     "# 2: log at the INFO level\n",
     "# 3: log at the DEBUG level (even more information)\n",
     "\n",
-    "setup_logging(verbose=0)"
+    "setup_logging(verbose=1)"
    ]
   },
   {
@@ -52,12 +51,9 @@
     "# These functions will be shortend with some python script  in the other notebooks to ensure shorter more readable notebooks.\n",
     "\n",
     "# Get Paths from yaml file \n",
-    "source_path = Path('paths.yml').resolve()\n",
-    "with open(source_path, \"r\") as f:\n",
-    "    workspace = yaml.safe_load(f)\n",
-    "\n",
-    "# Get Secrets from .env File (defined in paths.yml)\n",
-    "secrets = dotenv_values(workspace['credentials'])"
+    "src = Path('paths.yml').resolve()\n",
+    "with open(src, \"r\") as f:\n",
+    "    workspace = yaml.safe_load(f)\n"
    ]
   },
   {
@@ -76,19 +72,8 @@
    "outputs": [],
    "source": [
     "#Create EODAG Object and set preferred Provider\n",
-    "\n",
     "dag = EODataAccessGateway()\n",
-    "dag.set_preferred_provider(\"cop_dataspace\") # Copernicus Data Space Ecosystem\n",
-    "\n",
-    "dag.update_providers_config(f\"\"\"\n",
-    "    cop_dataspace:\n",
-    "        download:\n",
-    "            outputs_prefix: {os.path.abspath(workspace['download'])}\n",
-    "        auth:\n",
-    "            credentials:\n",
-    "                username: {secrets['USER_KEY']}\n",
-    "                password: {secrets['USER_SECRET']}\n",
-    "\"\"\")"
+    "dag.set_preferred_provider(\"cop_dataspace\") # Copernicus Data Space Ecosystem"
    ]
   },
   {
@@ -118,11 +103,11 @@
     "    provider='cop_dataspace',\n",
     "    geom=extent,\n",
     "    #tileIdentifier=\"33UXP\",\n",
-    "    start='2021-04-01',\n",
-    "    end='2021-05-01',\n",
-    "    cloudCover=50 #You can specify cloudcover here or later when filtering.\n",
+    "    start='2024-05-04',\n",
+    "    end='2024-05-07',\n",
+    "    cloudCover=80 #You can specify cloudcover here or later when filtering.\n",
     ")\n",
-    "\n",
+    "search_results = SearchResult(sorted([p for p in search_results], key=lambda p:p.properties[\"title\"].split(\"_\")[2]))\n",
     "print(f\"Got {len(search_results)} products and an estimated total number of {total_count} products.\")"
    ]
   },
@@ -248,10 +233,10 @@
    "outputs": [],
    "source": [
     "# Filter by Processing Pipeline\n",
-    "products = SearchResult([p for p in online_products if p.properties['id'].split('_')[3] == 'N0300'])\n",
+    "products = SearchResult([p for p in online_products if p.properties['id'].split('_')[3] == 'N0510'])\n",
     "\n",
     "# Filter by Tile\n",
-    "products = SearchResult([p for p in products if p.properties['id'].split('_')[5] == 'T33UXP'])\n",
+    "#products = SearchResult([p for p in products if p.properties['id'].split('_')[5] == 'T33UXP'])\n",
     "plot_quicklooks(products)"
    ]
   },
