--- a/notebooks/02_eodag_des_post.ipynb
+++ b/notebooks/02_eodag_des_post.ipynb
@@ -19,6 +19,7 @@
     "from rasterio.crs import CRS\n",
     "\n",
     "import eotools.shortcut as eoshort\n",
+    "import eotools.loading as eoload\n",
     "\n",
     "# Setup Verbose Values:\n",
     "# 0: no logging and no progress bar\n",
@@ -26,7 +27,7 @@
     "# 2: log at the INFO level\n",
     "# 3: log at the DEBUG level (even more information)\n",
     "\n",
-    "setup_logging(verbose=0)\n"
+    "setup_logging(verbose=1)\n"
    ]
   },
   {
@@ -55,9 +56,9 @@
    "source": [
     "# Get Credentials from .env file and make dirs from paths.yml\n",
     "# These functions are just shortcuts from a python script and just help to keep the notebooks short and simple\n",
-    "secrets, workspace = eoshort.read_paths(path='paths.yml')\n",
+    "workspace = eoshort.read_paths(filepath='paths.yml')\n",
     "dag = EODataAccessGateway()\n",
-    "dag = eoshort.configure(dag=dag, secrets=secrets, paths=workspace)"
+    "dag.set_preferred_provider(\"cop_dataspace\")"
    ]
   },
   {
@@ -142,7 +143,7 @@
     "# Setting common Parameters for all further image processing\n",
     "common_params = dict(\n",
     "    crs=CRS.from_epsg(4326),               # the downloaded images are in 4326, don't reproject them\n",
-    "    resolution=0.0006,                     # but lower their resolution (0.0006 should be 60m in 100km)\n",
+    "    resolution=0.0001,                     # but lower their resolution (0.0006 should be 60m in 100km)\n",
     "    extent=(lonmin,latmin,lonmax,latmax)   # and zoom over/crop the area of interest\n",
     ")\n",
     "\n",
@@ -176,19 +177,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sorting the search results for reproducibility (sorted by tile(5) and date (2))\n",
-    "products = sorted([p for p in deserialized_search_results], key=lambda p: p.properties[\"title\"].split(\"_\")[5] + p.properties[\"title\"].split(\"_\")[2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Load Bands 4 and 8 into memory\n",
-    "RED = products[0].get_data(band=\"B04\", **common_params)\n",
-    "NIR = products[0].get_data(band=\"B08\", **common_params)\n",
+    "def band_regex(band, res=60):\n",
+    "    return rf'^(?!.*MSK).*{band}_(60|20<10)m.*$'\n",
+    "\n",
+    "RED = products[0].get_data(band=band_regex('B04', res=10), **common_params)\n",
+    "NIR = products[0].get_data(band=band_regex('B08', res=10), **common_params)\n",
     "\n",
     "NDVI = normalized_difference(NIR, RED)"
    ]
@@ -258,12 +252,12 @@
    "outputs": [],
    "source": [
     "# Function for loading multiple datasets\n",
-    "def load_multiple_timestamps(products, bands:list, params):\n",
+    "def load_multiple_timestamps(products, bands:list, *args, **kwargs):\n",
     "    # Empty List where datasets are stored\n",
     "    single_ds = []\n",
     "    for product in products:\n",
     "        # Load each dataarray and add to single_ds List\n",
-    "        single_product = load_single_product(product=product, bands=bands, params=params)\n",
+    "        single_product = load_single_product(product=product, bands=bands, *args, **kwargs)\n",
     "        single_ds.append(single_product)\n",
     "    # Merge datasets from List\n",
     "    ds = xr.merge(single_ds)\n",
@@ -297,10 +291,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bands_2_load = load_assets(paths[0], res=10, only_spectral=True, include_tci=False)\n",
+    "bands_2_load = load_assets(paths[0], res=60, only_spectral=True, include_tci=False)\n",
     "\n",
-    "ds = load_multiple_timestamps(products=products, bands=bands_2_load)"
+    "ds = eoload.load_multiple_timestamps_regex(products=products, bands=bands_2_load)\n",
+    "ds"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
