--- a/notebooks/04_eodag_search_post.ipynb
+++ b/notebooks/04_eodag_search_post.ipynb
@@ -33,7 +33,7 @@
     "# 2: log at the INFO level\n",
     "# 3: log at the DEBUG level (even more information)\n",
     "\n",
-    "setup_logging(verbose=0)"
+    "setup_logging(verbose=1)"
    ]
   },
   {
@@ -64,9 +64,9 @@
    "source": [
     "# Get Credentials from .env file and make dirs from paths.yml\n",
     "# These functions are just shortcuts from a python script and just help to keep the notebooks short and simple\n",
-    "secrets, workspace = eoshort.read_paths(path='paths.yml')\n",
+    "workspace = eoshort.read_paths(filepath='paths.yml')\n",
     "dag = EODataAccessGateway()\n",
-    "dag = eoshort.configure(dag=dag, secrets=secrets, paths=workspace)"
+    "dag.set_preferred_provider(\"cop_dataspace\")"
    ]
   },
   {
