--- a/notebooks/05_eodag_merging.ipynb
+++ b/notebooks/05_eodag_merging.ipynb
@@ -32,7 +32,7 @@
     "# 2: log at the INFO level\n",
     "# 3: log at the DEBUG level (even more information)\n",
     "\n",
-    "setup_logging(verbose=0)\n"
+    "setup_logging(verbose=1)\n"
    ]
   },
   {
@@ -62,9 +62,9 @@
    "source": [
     "# Get Credentials from .env file and make dirs from paths.yml\n",
     "# These functions are just shortcuts from a python script and just help to keep the notebooks short and simple\n",
-    "secrets, workspace = eoshort.read_paths(path='paths.yml')\n",
+    "workspace = eoshort.read_paths(filepath='paths.yml')\n",
     "dag = EODataAccessGateway()\n",
-    "dag = eoshort.configure(dag=dag, secrets=secrets, paths=workspace)\n",
+    "dag.set_preferred_provider(\"cop_dataspace\")\n",
     "deserialized_search_results = eoshort.deserialize(filepath=\"search_results.geojson\", workspace=workspace, dag=dag, log=True)\n",
     "\n",
     "# Download multiple Products\n",
@@ -116,54 +116,6 @@
    "metadata": {},
    "source": [
     "## Post Process - Merging"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get a list of all available Bands (assets)\n",
-    "bands_to_load = eoload.load_assets(paths[0], res=10)[1:-1]\n",
-    "print(bands_to_load)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Loading multiple Bands into a dataset with multiple Timestamps of single Tile\n",
-    "\n",
-    "tile_1 = sorted([p for p in products if 'T33UWP' == p.properties['title'].split('_')[5]], key=lambda p: p.properties[\"title\"].split(\"_\")[2])\n",
-    "\n",
-    "ds_t1 = eoload.load_multiple_timestamps(products=tile_1, bands=bands_to_load)\n",
-    "print(f'This dataset from Tile T33UWP has {len(ds_t1.time)} timestamps.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Loading multiple Bands into a dataset with multiple Timestamps of single Tile\n",
-    "\n",
-    "tile_2 = sorted([p for p in products if 'T33UXP' == p.properties['title'].split('_')[5]], key=lambda p: p.properties[\"title\"].split(\"_\")[2])\n",
-    "\n",
-    "ds_t2 = eoload.load_multiple_timestamps(products=tile_2, bands=bands_to_load)\n",
-    "print(f'This dataset from Tile T33UXP has {len(ds_t2.time)} timestamps.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# The Merging of the datasets (tile_33UXP and tile_33UWP) (each with multiple timestamps on two different tiles) has not yet been implemented."
    ]
   },
   {
