--- a/notebooks/07_eodag_roi.ipynb
+++ b/notebooks/07_eodag_roi.ipynb
@@ -29,7 +29,7 @@
     "# 2: log at the INFO level\n",
     "# 3: log at the DEBUG level (even more information)\n",
     "\n",
-    "setup_logging(verbose=0)"
+    "setup_logging(verbose=1)"
    ]
   },
   {
@@ -48,9 +48,9 @@
    "source": [
     "# Get Credentials from .env file and make dirs from paths.yml\n",
     "# These functions are just shortcuts from a python script and just help to keep the notebooks short and simple\n",
-    "secrets, workspace = eoshort.read_paths(path='paths.yml')\n",
+    "workspace = eoshort.read_paths(filepath='paths.yml')\n",
     "dag = EODataAccessGateway()\n",
-    "dag = eoshort.configure(dag=dag, secrets=secrets, paths=workspace)\n",
+    "dag.set_preferred_provider(\"cop_dataspace\")\n",
     "deserialized_search_results = eoshort.deserialize(filepath=\"search_results.geojson\", workspace=workspace, dag=dag, log=True)\n",
     "\n",
     "# Download Single Product\n",
